--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 # RELLENAR
-DATABASE_URL="mysql://root:rootpass@localhost:3306/autoriza-autentica"
+DATABASE_URL="mysql://root:@localhost:3306/autoriza-autentica"
