--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "autorizacion_autenticacion",
   "version": "1.0.0",
-  "main": "index.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon src/server.js",
@@ -28,6 +27,7 @@
   "dependencies": {
     "@prisma/client": "^6.7.0",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2"
   }
 }
