carga token y middleware

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # RELLENAR
-DATABASE_URL="mysql://root:@localhost:3306/autoriza-autentica"
+DATABASE_URL = "mysql://root:@localhost:3306/autoriza-autentica"
+CLAVE_JWT = "asikdjholakhd109740912jadkl"
