--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-# RELLENAR
-DATABASE_URL = "mysql://root:@localhost:3306/autoriza-autentica"
+DATABASE_URL = "mysql://root:root@localhost:8889/franco_js"
 CLAVE_JWT = "asikdjholakhd109740912jadkl"
